# chaddi-tg

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  TESTING_SETUP.md  ai-loop.sh  bot_chaddi.py  config.py  coverage.json  deploy_chaddi.sh  docker-compose.yml  env-example  freeze.txt  handlers.py  kill_prod.sh  main.py  pyproject.toml  requirements.txt  retired.py  run.sh  run_prod.sh  test.sh  util.py
.circleci/: config.yml
.github/workflows/: api-build-deploy.yml  deploy.yml
.run/: chaddi.run.xml
docker/: Dockerfile  docker-entrypoint.sh
docs/: commands.txt  config_descriptions.md  gradient_h.afphoto  metadata.md  migration_group_specific_quotes.sql  sample_handler.md
docs/db_migrations/: migration_censored_to_modifiers.sql  migration_move_quotes.sql
docs/monitoring/: metrics.md
frontend/: .env.example  bunfig.toml  index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
monitoring/: .gitignore  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.sample.yaml  prometheus.yml
scripts/: clear-db.sh  deploy-chaddi.sh  deploy-constants.sample.sh  deploy-hostscript.sh  deploy_chaddi.sh  kill-chaddi.sh  kill.sh  provision-db.sh  restart-prod.sh  run-prod.sh  run_bot_dev.sh  run_dev.sh  run_prod.sh
src/: bakchod_util.py  bot_chaddi.py  chaddi.py  chaddi_bot.py  config.py.sample  dump_pickle.py  sandbox.py  util.py
src/bot/: __init__.py
src/config/: dockerized.ini  sample.ini
src/db/: __init__.py  bakchod.py  bakchod_dao.py  dao.py  group.py  group_dao.py  message.py  message_dao.py  quote.py  roll_dao.py  scheduledjob_dao.py
src/domain/: ai.py  analytics.py  bakchod.py  config.py  dc.py  jobs.py  logger.py  metrics.py  otel_logging.py  quote_pics.py  rokda.py  scheduler.py  tg_logger.py  util.py  version.py
src/handlers/: __init__.py  aao.py  about.py  bakchod.py  basics.py  bestie.py  birthday.py  calc.py  censor.py  choose.py  chutiya.py  daan.py  day.py  default.py  error.py  errors.py  gamble.py  good_morning.py  help.py  hi.py  jyotish.py  macro.py  me.py  mom.py  mom2.py  purge.py  quotes.py  reset.py  rokda.py  roll.py  setter.py  superpower.py  translate.py  tts.py  webm.py  webm_converter.py  webm_handler.py  year.py
src/models/: bakchod.py  db.py  group.py  roll.py
src/resources/: config.json.sample  config.json.template  ghati_dev.json  preposition-to-verb-map.json  preposition_to_verb_map.json  sample_config.json  verb-past-lookup.json  verbPastLookup.json
src/server/: __init__.py  routes.py
tests/: conftest.py  manual_test_music_handler.py  test_ai.py  test_bakchod_dao.py  test_basic.py  test_bot_aao.py  test_bot_about.py  test_bot_ai.py  test_bot_antiwordle.py  test_bot_ask.py  test_bot_bestie.py  test_bot_bs.py  test_bot_chutiya.py  test_bot_daan.py  test_bot_dalle.py  test_bot_defaults.py  test_bot_errors.py  test_bot_gamble.py  test_bot_handlers.py  test_bot_hi.py  test_bot_instagram.py  test_bot_mom_llm.py  test_bot_mom_rake.py  test_bot_mom_spacy.py  test_bot_musiclinks.py  test_bot_pic.py  test_bot_quotes.py  test_bot_remind.py  test_bot_roll.py  test_bot_setter.py  test_bot_superpower.py  test_bot_sutta.py  test_bot_translate.py  test_bot_tynm.py  test_bot_weather.py  test_bot_webm.py  test_bot_x_links.py  test_bot_ytdl.py  test_config.py  test_dc.py  (+14 more)
(+130 files in other folders)
